
[package]
name = "conclave-room-net"
version = "0.0.2-pre01"
edition = "2021"
license = "MIT"
description = "network layer for a conclave room"
repository = "https://github.com/piot/conclave-room-net-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conclave-room-session = { path = "../session" }
conclave-room-serialize = { path = "../serialize" }
flood-rs = "0.0.4"
log = "0.4.21"

